# Library-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 56d8820765e9_initial_migrations.py  717c66a96aa7_change_deleting_children.py  769aec6bace6_initial_commit.py  f27336b055e4_initial_migrations.py
src/app/: database.py  main.py  models.py  routers.py  schemes.py
src/app/crud/: author.py  book.py  borrow.py
src/app/routers/: author_routers.py  book_routers.py  borrow_routers.py
